force-app/main/default/objects/Leave_Request__c/fields/Leave_Count__c.field-meta.xml
<CustomField>
    <fullName>Leave_Count__c</fullName>
    <label>Leave Count</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>