force-app/main/default/objects/Leave_Request__c/fields/No_of_Leaves__c.field-meta.xml
<CustomField>
    <fullName>No_of_Leaves__c</fullName>
    <label>No of Leaves</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>