force-app/main/default/objects/Leave_Request__c/fields/Remaining_Leave__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Leave__c</fullName>
    <label>Remaining Leave</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>