force-app/main/default/objects/Leave_Request__c/fields/Report_To__c.field-meta.xml
<CustomField>
    <fullName>Report_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report To</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Leave Requests (Report To)</relationshipLabel>
    <relationshipName>Leave_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>