force-app/main/default/objects/Leave_Request__c/fields/Reporting_To__c.field-meta.xml
<CustomField>
    <fullName>Reporting_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting To</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Leave Requests (Reporting To)</relationshipLabel>
    <relationshipName>Leave_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>