force-app/main/default/objects/Leave_Request__c/fields/Requesting__c.field-meta.xml
<CustomField>
    <fullName>Requesting__c</fullName>
    <label>Requesting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full day</fullName>
            </value>
            <value>
                <fullName>First half</fullName>
            </value>
            <value>
                <fullName>Second half</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>