force-app/main/default/objects/Leave_Request__c/fields/Total_Leave__c.field-meta.xml
<CustomField>
    <fullName>Total_Leave__c</fullName>
    <formula>IF(
    ISPICKVAL( Leave_Type__c , &quot;Sick Leave&quot;),
    12,
    IF(
        ISPICKVAL(Leave_Type__c, &quot;Casual Leave&quot;),
        12,IF(
        ISPICKVAL(Leave_Type__c, &quot;Marriage Leave&quot;),
        7,IF(
        ISPICKVAL(Leave_Type__c, &quot;Bereavement Leave&quot;),
        3,IF(
        ISPICKVAL(Leave_Type__c, &quot;Earned Leave&quot;),
        20,IF(
        ISPICKVAL(Leave_Type__c, &quot;Loss Of Pay Leave&quot;),
        7,IF(
        ISPICKVAL(Leave_Type__c, &quot;Work From Home&quot;),
        15,
        0
             )
           )
         )
       )
     )
   )
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Leave</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>