force-app/main/default/objects/Leave_Request__c/validationRules/From_date_should_not_be_greater_than_to.validationRule-meta.xml
<ValidationRule>
    <fullName>From_date_should_not_be_greater_than_to</fullName>
    <active>true</active>
    <errorConditionFormula>From__c &gt; To__c</errorConditionFormula>
    <errorMessage>From date should not be greater than To date</errorMessage>
</ValidationRule>