force-app/main/default/objects/Leave_Request__c/validationRules/Leave_count_should_be_equal_to_From_To.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_count_should_be_equal_to_From_To</fullName>
    <active>true</active>
    <errorConditionFormula>To__c - From__c + 1 &lt;&gt; Leave_Count__c</errorConditionFormula>
    <errorMessage>From Date and To Date  should be equal to Leave Count .</errorMessage>
</ValidationRule>