force-app/main/default/objects/Leave_Request__c/validationRules/To_date_should_not_be_lesser_than_From.validationRule-meta.xml
<ValidationRule>
    <fullName>To_date_should_not_be_lesser_than_From</fullName>
    <active>true</active>
    <errorConditionFormula>To__c &lt; From__c</errorConditionFormula>
    <errorMessage>To date should not be lesser than From date</errorMessage>
</ValidationRule>