force-app/main/default/objects/Leave_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Id__c</columns>
    <columns>Name__c</columns>
    <columns>Reporting_To__c</columns>
    <columns>Leave_Type__c</columns>
    <columns>Leave_Count__c</columns>
    <columns>Reason_for_Leave__c</columns>
    <columns>Remaining_Leave__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>